mysite-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysite-deployment
  namespace: mysite
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mysite
  template:
    metadata:
      labels:
        app: mysite
    spec:
      containers:
      - name: mysite
        image: pavlmark/mysite:v4.0.1
        ports:
        - containerPort: 80
      resources:
        requests:
          memory: "12Mi"
          cpu: "20m"
        limits:
          memory: "128Mi"
          cpu: "300m"
