pod.yaml
#apiVersion: v1
#kind: Pod
#metadata:
#  name: nginx
#  labels:
#    app: nginx
#    tier: frontend
#spec:
#  containers:
#  - name: nginx
#    image: nginx:1.42.2
#
#apiVersion: v1
#kind: ReplicationController
#metadata:
#  name: nginx-rc
#spec:
#  replicas: 3
#  selector:
#    app: nginx
#  template:
#    metadata:
#      labels:
#        app: nginx
#    spec:
#      containers:
#      - name: nginx
#        image: nginx
#        ports:
#        - containerPort: 80

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
