mysite-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysite-balancer
  namespace: mysite
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: mysite
  type: LoadBalancer
status:
  loadBalancer: {}
