service-mysite.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: mysite
spec:
  type: NodePort
  selector:
    app:  mysite-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30010
